fixed overlapping issues in home

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
   :root {
     --background: 261 100% 97%;
     --background2: 251 67% 90%;
-    --foreground: 233 27% 36%;
+    --foreground: 282 80% 14%;
     --foreground2: 229 50% 77%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
